# microagg1d

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  GalilPark.ipynb  Multivariate.ipynb  PolynomialTimeApproximation.ipynb  README.md  SpeedComparison.ipynb  TestALgorithmDifferences.ipynb  Wilber for microagg.ipynb  diag_algorithm.ipynb  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py
.github/workflows/: ci.yaml
microagg1d/: algorithms_educational.py  algorithms_linear.py  algorithms_old.py  common.py  cost_maxdist.py  cost_round.py  cost_sae.py  cost_sse.py  educational_algorithms.py  generation.py  linear_algorithms.py  main.py  old_algorithms.py  other_algorithms.py  sae_cost.py  smawk_iter2.py  sse.py  sse_cost.py  user_facing.py  wilber.py  wilber2.py
microagg1d/tests/: test_algorithms_maxdist.py  test_algorithms_round.py  test_algorithms_sae.py  test_algorithms_sse.py  test_generation.py  test_main.py  test_smwak.py  test_sse_cost.py  test_wilber.py
src/microagg1d/: algorithms_other.py  common.py  cost_sse.py  main.py  multivariate_poly.py
tests/: test_algorithms_maxdist.py  test_algorithms_round.py  test_algorithms_sae.py  test_algorithms_sse.py  test_main.py  test_multivariate_poly.py  test_smwak.py  test_sse_cost.py
